<?xml version="1.0" encoding="utf-8"?>

<!--
Copyright 2011-12 Tom Walsh

This program is free software released under version 3
of the GPL.  See file gpl.txt for more information.
-->

<resources>
  <string name="load_profile">Load Profile</string>
  <string name="select_option">Please select an option from the menu</string>
  <string name="downloading">Downloading...</string>  
  <string name="nearby_stops">See nearby stops</string>  

  <string name="profile_in_intent">com.github.tommywalsh.mbta.Profile</string>
  <string name="departures_in_intent">com.github.tommywalsh.mbta.Departures</string>
  <string name="profile_entries_in_intent">com.github.tommywalsh.mbta.ProfileEntries</string>
  <string name="instructions_in_intent">com.github.tommywalsh.mbta.Instructions</string>
  <string name="db_screen_style_in_intent">com.github.tommywalsh.mbta.ScreenStyle</string>
  <string name="stop_choice_in_intent">com.github.tommywalsh.mbta.StopChoice</string>
  <string name="subroute_in_intent">com.github.tommywalsh.mbta.Subroute</string>
  <string name="route_in_intent">com.github.tommywalsh.mbta.Route</string>
  <string name="srtitle_in_intent">com.github.tommywalsh.mbta.SRTitle</string>

  <string name="download_message">Downloading.  Please wait...</string>


  <string name="editor_empty_text">There are no busses in this profile.  Get started by selecting the \'Add More Busses\' button</string>
  <string name="add_busses">Add More Busses</string>
  <string name="prune_busses">Remove Busses</string>
  <string name="delete_profile_text">Delete This Profile</string>

  <string name="save">Save</string>
  <string name="cancel">Cancel</string>
  <string name="ok">OK</string>

  <string name="upcoming_departures">Upcoming Departures</string>
  <string name="no_departures">No upcoming departures!</string>

  <string name="welcome_banner">Welcome To Straphanger!</string>
  <string name="download_banner">Refresh Database</string>
  <string name="welcome_text">
    Before this app can do anything interesting, a database of route data
    must be downloaded from the MBTA.
  </string>
  <string name="scare_text">
    Downloading the database can take several minutes.  It\'s advisable
    to do this while you have stable high-speed service or are connected
    to the internet via WiFi.
  </string>
  <string name="dl_text">Download Database Now</string>
  <string name="quit">Exit Straphanger</string>

</resources>
