<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2011-12 Tom Walsh

This program is free software released under version 3
of the GPL.  See file gpl.txt for more information.
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	 	android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		>

  <TextView
     android:id="@+id/welcome_title"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:layout_alignParentTop="true"
     android:layout_alignParentLeft="true"
     android:layout_alignParentRight="true"
     android:gravity="center"
     android:background="@color/accent"
     android:textSize="22sp"
     android:text="@string/welcome_banner"
     />

  <TextView
     android:id="@+id/welcome_text"
     style="@style/info_text"
     android:layout_below="@id/welcome_title"
     android:text="@string/welcome_text"
     />

    <TextView
        android:id="@+id/scare_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/welcome_text"
        style="@style/scare_text"
        android:text="@string/scare_text"
     />

  <LinearLayout
      android:orientation="horizontal"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      >

    <Button 
        android:id="@+id/build_button"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/dl_text"
        />

    <Button
        android:id="@+id/cancel_build_button"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/quit"
        />
  </LinearLayout>  

</RelativeLayout>

